--- a/tmpl/root/Makefile
+++ b/tmpl/root/Makefile
@@ -4,7 +4,7 @@
 #
 
 GCP_ZONE ?= $(shell [[ -f .config/gcloud/configurations/config_default ]] && cat .config/gcloud/configurations/config_default | grep zone | awk '{ printf("%s",$$3) }')
-GCP_PROJECT = $(shell cat gcp.project.name)
+GCP_PROJECT = $(shell if [[ -f gcp.project.name ]]; then cat gcp.project.name; else :; fi)
 
 nothing:
 
@@ -22,7 +22,7 @@ finish: hal.deploy.connect is.hal.connected spin.setup external.tunnel.command
 
 cdenv: .gitconfig capstan gcloud gcloud.test terraform
 
-clean: clean.external.tunnel.command clean.spinnaker.app clean.terraform clean.gcp-account.json clean.gcloud.test clean.gcloud clean.capstan clean.gitconfig
+clean: clean.external.tunnel.command clean.terraform clean.gcp-account.json clean.gcloud.test clean.gcloud clean.capstan clean.gitconfig
 
 debug:
 	@printf "%-25.25s = %s\n" "CAPSTAN_REPO"           "$(CAPSTAN_REPO)"
@@ -64,7 +64,7 @@ external.tunnel.command:
 	@#ls -l external.tunnel.command
 
 clean.external.tunnel.command:
-	rm -Rf external.tunnel.command
+	rm -Rf external.tunnel.command external.command
 
 ###
 
@@ -182,8 +182,9 @@ terraform: capstan gcp-account.json
 	   && time terraform apply -var gcp_project_id=$(GCP_PROJECT) -var ssh_user=$(GCP_PROJECT) -auto-approve -refresh=true | tee -a /root/terraform.log
 
 clean.terraform:
-	cd /root/capstan/gcp/terraform/ \
-	   && time terraform destroy -var gcp_project_id=$(GCP_PROJECT) -var ssh_user=$(GCP_PROJECT)
+	if [[ -d /root/capstan/gcp/terraform/ ]]; then \
+	   cd /root/capstan/gcp/terraform/ \
+	   && time terraform destroy -var gcp_project_id=$(GCP_PROJECT) -var ssh_user=$(GCP_PROJECT) 2>&1 > /dev/null; else :; fi
 	rm -Rf /root/.terraform.d /root/capstan/gcp/terraform/.terraform.d terraform.log
 
 ###
@@ -216,7 +217,7 @@ test-instance-name:
 
 clean.gcloud.test:
 	( [[ -f test-instance-name ]] && (gcloud compute instances list --filter="name=('$$(cat test-instance-name)')" ) || :; )
-	( [[ -f test-instance-name ]] && (gcloud compute instances delete "$$(cat test-instance-name)" ) || :; )
+	( [[ -f test-instance-name ]] && (gcloud compute instances delete --zone "$(GCP_ZONE)" "$$(cat test-instance-name)" ) || :; )
 	( [[ -f test-instance-name ]] && rm -Rf test-instance-name ) || :;
 	rm -Rf .ssh
 
@@ -290,7 +291,7 @@ clean.gcp.project.name:
 ###
 
 capstan:
-	git clone $(CAPSTAN_REPO) \
+	git clone $(CAPSTAN_REPO) capstan \
 	   && cd capstan \
 	   && git checkout $(CAPSTAN_TAG) \
 	   && git log -1
